fix: spacing issue on desktop;

--- a/blocks/jump-nav/jump-nav.css
+++ b/blocks/jump-nav/jump-nav.css
@@ -55,6 +55,7 @@ div.jump-nav-container {
 @media (width >= 900px) {
   .jump-nav ul {
     align-items: center;
+    min-height: 68px;
   }
 }
 
